fix alignment on eww bar!

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -4,15 +4,15 @@
 }
 
 window {
-    background-color: rgba(6, 8, 10, 0.9);
+    background-color: rgba(23, 27, 33, 0.9);
 }
 
 button {
     border-radius: 8px;
-    border-color: rgba(139, 119, 63, 0.4);
-    text-decoration-color: rgb(194, 207, 189);
-    color: rgb(194, 207, 189);
-    background-color: rgba(6, 8, 10, 0.7);
+    border-color: rgba(101, 114, 133, 0.4);
+    text-decoration-color: rgb(170, 177, 187);
+    color: rgb(170, 177, 187);
+    background-color: rgba(23, 27, 33, 0.7);
     border-style: solid;
     border-width: 2px;
     background-repeat: no-repeat;
@@ -23,8 +23,8 @@ button {
 }
 
 button:focus, button:active, button:hover {
-    background-color: rgba(139, 119, 63, 0.7);
-    border-color: rgba(139, 119, 63, 0.8);
+    background-color: rgba(101, 114, 133, 0.7);
+    border-color: rgba(101, 114, 133, 0.8);
     outline-style: none;
 }
 
